# CppLab2

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  gitconfig
include/: MyString.h  String.h
src/: string.cpp
tests/: test_string.cpp
